--- a/src/Anaxago/CoreBundle/Resources/views/Default/index.html.twig
+++ b/src/Anaxago/CoreBundle/Resources/views/Default/index.html.twig
@@ -16,6 +16,8 @@
                             <p class="card-text">
                                 {{ project.description }}
                             </p>
+
+                            <a class="btn btn-primary" role="button" href="{{ path('project', { 'id' : project.id }) }}">En savoir plus</a>
                         </div>
                     </div>
                 </div>
